# ECU_simulator

./: CMakeLists.txt  README.md
src/: ECUState.h  main.cpp
src/Filters/: Filter.h
src/can/: CANBus.cpp  CANBus.h  CANMessage.h
src/dtc/: DTC.h  DTCManager.cpp  DTCManager.h
src/engine/: EnginePhysics.h  FuelControl.cpp  FuelControl.h
src/logging/: Logger.cpp  Logger.h
src/memory/: FlashMemory.cpp  FlashMemory.h
src/scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  TaskScheduler.cpp  TaskScheduler.h
src/sensors/: SensorModule.cpp  SensorModule.h
